updated education page with additional gifs, embedded videos and other information in popups for the webinar schedule, and slight changes to the text. fixed popup location so that they do not overflow the browser window, and made them look a bit nicer, and add functionality to load/pause videos on popup open, also fixed 'middle' images position. fixed navigation bar naming, and layout

--- a/wiki/page_templates/reference/content_styling.css
+++ b/wiki/page_templates/reference/content_styling.css
@@ -90,13 +90,10 @@ div.image.right{
     float:right;
     padding-left:2vh;
 }
-div.image.left{
-    float:left;
-    padding-right:2vh;
-}
-div.image.right{
-    float:right;
-    padding-left:2vh;
+div.image.middle{
+    position:relative;
+    left:50%;
+    transform:translateX(-50%);
 }
 #fgfuture_content div.w10{
     width:10%;
@@ -167,6 +164,13 @@ div.image.right{
     border-radius:0.6vh;
     border:1px solid black;
 }
+#fgfuture_content a.button.wide{
+    margin-top: 0.5vh;
+    padding:0.7vh;
+    margin-right: 3vh;
+    width:calc( 100% - 2 * 0.7vh - 2 * 1px - 3vh );
+    text-align: center;
+}
 
 #fgfuture_content span.popup_target{
     color:#6d1d23;
@@ -175,6 +179,17 @@ div.image.right{
     padding:0;
 }
 
-#fgfuture_content object.w100p{
+#fgfuture_content .popup object.w100p{
     width:100%;
+}
+#fgfuture_content .popup video{
+    width:100%;
+}
+
+/* for use embedded into regular text */
+#fgfuture_content object.pdf_file{
+    width:90%;
+    left:5%;
+    position:relative;
+    height: 50vh;
 }
