--- a/wiki/page_templates/reference/popups.css
+++ b/wiki/page_templates/reference/popups.css
@@ -7,7 +7,7 @@
     display:inline-block;
     color:black;
     position:fixed;
-    padding:1vh;
+    padding:2vh;
 
     transform:translateX(-50%);
 
@@ -15,6 +15,7 @@
     z-index:10;
     background-color:white;
     border:0.2vh solid black;
+    border-radius:2vh;
 }
 .popup:not(.w25):not(.w50){
     width:15vw;
